--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/07.jpg" width="250" height="200" class="image fit thumb"><img src="images/thumbs/07.jpg" width="250" height="200" alt="" /></a>
+							  <h3 style="text-align:justify">Projeto de estudo visando a previsão de vendas de uma rede farmacêutica utilizando um dataset disponibilizado na plataforma Kaggle. O projeto abrange as etapas de limpeza dos dados, análise exploratória de dados e também a modelagem e avaliação dos algoritmos de machine learning (Random Forest e XGBoost). </h3>
+								<a href="https://github.com/katsuyosh/dsprod"><p>Ver detalhes</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" width="250" height="200" class="image fit thumb"><img src="images/thumbs/01.jpg" width="250" height="200" alt="" /></a>
 							  <h3 style="text-align:justify">Projeto vinculado ao Programa Institucional de Bolsas de Iniciação Cientifica (PIBIC) envolvendo a implementação e testes em ambiente simulado de sensores LIDAR e de profundidade em um VANT, utilizando o Robot Operating System (ROS) e o sistema de controle aéreo PX4 Autopilot.</h3>
 								<a href="https://eventos.utfpr.edu.br//sicite/sicite2021/paper/view/8485"><p>Ver detalhes</p>
